--- a/hotsite/views/index.ejs
+++ b/hotsite/views/index.ejs
@@ -126,12 +126,12 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Cadastre seu e-mail que entraremos em contato</h2>
-                <form>
+                <form action="/add" method="post">
                     <div class="form-group col-md-6">                       
-                        <input type="text" class="form-control" id="name" placeholder="Nome">
+                        <input type="text" class="form-control" name="name" placeholder="Nome">
                     </div>                    
                     <div class="form-group col-md-6">                        
-                        <input type="email" class="form-control" id="customerEmail" placeholder="Email">
+                        <input type="email" class="form-control" name="email" placeholder="Email">
                     </div>
                   </div>
                   <button type="submit" class="btn btn-default">Cadastrar</button>
