--- a/public/stylesheets/creative.css
+++ b/public/stylesheets/creative.css
@@ -46,8 +46,14 @@ p {
   background-color: #7D1623;
 }
 .bg-dark {
-  background-color: #222222;
   color: white;
+  background-image: url(../images/dark.jpg);
+  background-position: 100% 378px;
+}
+
+.form-background{
+  background-color: rgba(51, 51, 51, 0.5);
+  padding: 30px;
 }
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
@@ -111,7 +117,6 @@ aside {
 @media (min-width: 768px) {
   .navbar-default {
     background-color: rgba(51, 51, 51, 0.5);
-    border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
     color: white;
@@ -180,6 +185,10 @@ header .header-content {
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(45, 45, 45, 0.59) 66%, rgb(125, 22, 35) 100%)}
+header .header-content-inner{
+  padding-top: 20%;
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
@@ -187,7 +196,6 @@ header .header-content .header-content-inner h1 {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 30px;
-  background-color: rgba(51, 51, 51, 0.5);
 }
 header .header-content .header-content-inner hr {
   margin: 30px auto;
@@ -403,7 +411,6 @@ fieldset[disabled] .btn-primary.active {
 .btn {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   border: none;
-  border-radius: 300px;
   font-weight: 700;
   text-transform: uppercase;
 }
