--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,15 +15,14 @@
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!-- Theme CSS -->
-    <link href="stylesheets/creative.min.css" rel="stylesheet"> 
-    <title>Meetup Share</title> 
+    <link href="stylesheets/creative.css" rel="stylesheet">
+    <title>Meetup Share</title>
 </head>
 
 <body id="page-top">
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
@@ -33,8 +32,6 @@
                   Meetup Share
                 </a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -51,15 +48,12 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>
-
     <header>
         <div class="header-content">
-            <div class="header-content-inner">
-                <h1 id="homeHeading">Meetup Share #1<br>Empreendedorismo</h1>
+            <div class="header-content-inner sr-contact">
+                <h1 id="homeHeading">Meetup Share</h1>
                 <hr>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Saiba Mais</a>
             </div>
@@ -72,8 +66,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                   <h2 class="section-heading text-uppercase">O que é um Meetup?</h2>
                     <hr class="light">
-                    <p class="text-faded">É um encontro informal que busca promover networking e troca de experiências!</p>
-                    <!--<a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
+                    <p class="text-faded sr-icons">
+                      Meetup surgiu da necessidade de novas pessoas trocarem experiências, seu principal objetivo é reunir pessoas para promover networking, discutir atualidades dos negócios e tornar o ambiente bem descontraído.
+                    <p>
                 </div>
             </div>
         </div>
@@ -90,53 +85,50 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center sr-icons">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <i class="fa fa-4x fa-comments-o text-primary sr-icons"></i>
+                        <h3>Troca de Experiências</h3>
+                        <p class="text-muted">
+                          Queremos promover meetups para revitalizar a comunidade, fomentando o networking e a troca de experiências.
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center sr-icons">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <i class="fa fa-4x fa-bullhorn text-primary sr-icons"></i>
+                        <h3>Networking</h3>
+                        <p class="text-muted">Acreditamos que os profissionais são capacitados e que atuam em uma área onde a interação social é essencial!</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center sr-icons">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <i class="fa fa-4x fa-graduation-cap text-primary sr-icons"></i>
+                        <h3>Disseminação de Conhecimento</h3>
+                        <p class="text-muted">Queremos conhecê-los para todos aprendermos mais!!</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>  
+    </section>
 
     <aside class="bg-dark" id="portfolio">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Cadastre seu e-mail que entraremos em contato</h2>
-                <form action="/add" method="post">
-                    <div class="form-group col-md-6">                       
-                        <input type="text" class="form-control" name="name" placeholder="Nome">
-                    </div>                    
-                    <div class="form-group col-md-6">                        
-                        <input type="email" class="form-control" name="email" placeholder="Email">
-                    </div>
-                  </div>
-                  <button type="submit" class="btn btn-default">Cadastrar</button>
-                </form>                
-            </div>
+      <div class="container text-center form-background sr-icons">
+          <div class="col-md-6 col-md-offset-3 ">
+            <h2 class="section-heading text-uppercase">Faça parte dessa Ideia!</h2>
+            <form action="/add" method="post" class="has-error">
+                <div class="form-group col-md-12">
+                    <input type="text" class="form-control" name="name" placeholder="Nome">
+                </div>
+                <div class="form-group col-md-12">
+                    <input type="email" class="form-control" name="email" placeholder="Email">
+                </div>
+              <button type="submit" class="btn btn-success">Cadastrar</button>
+            </form>
+            <% if (success) { %>
+              <div class="alert sr-icons" role="alert">Seu cadastro foi concluido com sucesso!</div>
+              <% } %>
+          </div>
         </div>
     </aside>
 
@@ -144,17 +136,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Apoiadores</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Quem apoia essa ideia?</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>SEBRAE</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p>ASSERT</p>
                 </div>
             </div>
         </div>
