--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,10 +41,10 @@
                         <a class="page-scroll" href="#services">Nosso propósito</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Eventos</a>
+                        <a class="page-scroll" href="#participe">Participe</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Organização</a>
+                        <a class="page-scroll" href="#apoiadores">Apoiadores</a>
                     </li>
                 </ul>
             </div>
@@ -112,11 +112,11 @@
         </div>
     </section>
 
-    <aside class="bg-dark" id="portfolio">
+    <aside class="bg-dark" id="participe">
       <div class="container text-center form-background sr-icons">
           <div class="col-md-6 col-md-offset-3 ">
             <h2 class="section-heading text-uppercase">Faça parte dessa Ideia!</h2>
-            <form action="/add" method="post" class="has-error">
+            <form  id="contact" class="has-error">
                 <div class="form-group col-md-12">
                     <input type="text" class="form-control" name="name" placeholder="Nome">
                 </div>
@@ -132,21 +132,22 @@
         </div>
     </aside>
 
-    <section id="contact">
+    <section id="apoiadores">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Apoiadores</h2>
                     <hr class="primary">
                     <p>Quem apoia essa ideia?</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>SEBRAE</p>
+                <div class="col-lg-4 text-center">
+                    <span class="sr-contact"><img src="/images/sebrae.png" alt="" width="150px" /></span>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p>ASSERT</p>
+                  <span class="sr-contact"><img src="/images/logoAsserti.png" alt="" width="150px" /></span>
+                </div>
+                <div class="col-lg-4 text-center">
+                  <span class="sr-contact"><img src="/images/univem.PNG" alt="" width="120px" /></span>
                 </div>
             </div>
         </div>
