--- a/views/index.ejs
+++ b/views/index.ejs
@@ -152,7 +152,12 @@
             </div>
         </div>
     </section>
-
+    <footer>
+        <div class="container">
+            <div class="row">
+            </div>
+        </div>
+    </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
