--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,9 @@
                         <a class="page-scroll" href="#services">Nosso propósito</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#associacao">Associação</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#participe">Participe</a>
                     </li>
                     <li>
@@ -111,7 +114,19 @@
             </div>
         </div>
     </section>
-
+    <section class="bg-primary" id="associacao">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <h2 class="section-heading text-uppercase">Nossa Associação</h2>
+                    <hr class="light">
+                    <p class="text-faded sr-icons">
+                      Meetup surgiu da necessidade de novas pessoas trocarem experiências, seu principal objetivo é reunir pessoas para promover networking, discutir atualidades dos negócios e tornar o ambiente bem descontraído.
+                    <p>
+                </div>
+            </div>
+        </div>
+    </section>
     <aside class="bg-dark" id="participe">
       <div class="container text-center form-background sr-icons">
           <div class="col-md-6 col-md-offset-3 ">
