--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,7 +131,7 @@
       <div class="container text-center form-background sr-icons">
           <div class="col-md-6 col-md-offset-3 ">
             <h2 class="section-heading text-uppercase">Faça parte dessa Ideia!</h2>
-            <form  id="contact" class="has-error">
+            <form action="/add" method="post" class="has-error">
                 <div class="form-group col-md-12">
                     <input type="text" class="form-control" name="name" placeholder="Nome">
                 </div>
