--- a/views/index.ejs
+++ b/views/index.ejs
@@ -155,13 +155,16 @@
                     <hr class="primary">
                     <p>Quem apoia essa ideia?</p>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <span class="sr-contact"><img src="/images/sebrae.png" alt="" width="150px" /></span>
+                <div class="col-lg-3 text-center">
+                    <span class="sr-contact"><img src="/images/citec.png" alt="" width="150px" /></span>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 text-center">
+                  <span class="sr-contact"><img src="/images/ciem.png" alt="" width="150px" /></span>
+                </div>
+                <div class="col-lg-3 text-center">
                   <span class="sr-contact"><img src="/images/logoAsserti.png" alt="" width="150px" /></span>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 text-center">
                   <span class="sr-contact"><img src="/images/univem.PNG" alt="" width="120px" /></span>
                 </div>
             </div>
