--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,7 @@
                 <div class="form-group col-md-12">
                     <input type="email" class="form-control" name="email" placeholder="Email">
                 </div>
-              <button type="submit" class="btn btn-success">Cadastrar</button>
+              <button type="submit" class="btn btn-primary">Cadastrar</button>
             </form>
             <% if (success) { %>
               <div class="alert sr-icons" role="alert">Seu cadastro foi concluido com sucesso!</div>
