--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
                   <h2 class="section-heading text-uppercase">Nossa Associação</h2>
                     <hr class="light">
                     <p class="text-faded sr-icons">
-                      Meetup surgiu da necessidade de novas pessoas trocarem experiências, seu principal objetivo é reunir pessoas para promover networking, discutir atualidades dos negócios e tornar o ambiente bem descontraído.
+                      Que tal fazer parte da nossa comunidade e ter acesso a um conteúdo de qualidade exclusivo para nossos associados, além de ter acesso em primeira mão as novidades da comunidade.
                     <p>
                 </div>
             </div>
