--- a/public/stylesheets/creative.css
+++ b/public/stylesheets/creative.css
@@ -440,6 +440,19 @@ body {
 }
 
 footer{
-  background-color: #7D1623;
   height: 165px;
+}
+
+.copyright{
+  margin-top: 11%;
+  color: #fff;
+  background-color: #7D1623;
+  height: 45px;
+}
+
+.copyright > span{
+}
+
+.heart{
+  color: #000;
 }
