--- a/views/index.ejs
+++ b/views/index.ejs
@@ -171,8 +171,14 @@
         </div>
     </section>
     <footer>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
+              <div class="copyright text-center text-login">
+                <div class="col-lg-12">
+                  © 2016, made with <i class="fa fa-heart heart"></i>
+                </div>
+              </span>
+              </div>
             </div>
         </div>
     </footer>
