--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,7 +131,7 @@
       <div class="container text-center form-background sr-icons">
           <div class="col-md-6 col-md-offset-3 ">
             <h2 class="section-heading text-uppercase">Faça parte dessa Ideia!</h2>
-            <form action="/add" method="post" class="has-error">
+            <form id="contato" class="has-error">
                 <div class="form-group col-md-12">
                     <input type="text" class="form-control" name="name" placeholder="Nome">
                 </div>
@@ -140,9 +140,7 @@
                 </div>
               <button type="submit" class="btn btn-primary">Cadastrar</button>
             </form>
-            <% if (success) { %>
-              <div class="alert sr-icons" role="alert">Seu cadastro foi concluido com sucesso!</div>
-              <% } %>
+              <div class="alert sr-icons sucesso" role="alert"></div>
           </div>
         </div>
     </aside>
@@ -194,7 +192,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="javascripts/creative.min.js"></script>
+    <script src="javascripts/creative.js"></script>
 
 </body>
 
