--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!-- Theme CSS -->
-    <link href="stylesheets/creative.css" rel="stylesheet">
+    <link href="stylesheets/style.css" rel="stylesheet">
     <title>Meetup Share</title>
 </head>
 
@@ -192,7 +192,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="javascripts/creative.js"></script>
+    <script src="javascripts/style.js"></script>
 
 </body>
 
